criadas os arquivos html e css para as paginas restantes, falta implementar as diferenciações entre paginas e os estilos

--- a/about_me.html
+++ b/about_me.html
@@ -12,7 +12,7 @@
     <body>
         <main class="principal">
             <h1>
-                Home
+                About Me
             </h1>
             <div>
                 <p>
@@ -23,6 +23,9 @@
                 </p>
                 <p>
                     Terceiro paragrafo
+                </p>
+                <p>
+                    Quarto paragrafo
                 </p>
             </div>
         </main>
