--- a/portifolio.html
+++ b/portifolio.html
@@ -12,18 +12,10 @@
     <body>
         <main class="principal">
             <h1>
-                Home
+                Portifolio
             </h1>
             <div>
-                <p>
-                    Primeiro paragrafo
-                </p>
-                <p>
-                    Segundo paragrafo
-                </p>
-                <p>
-                    Terceiro paragrafo
-                </p>
+                
             </div>
         </main>
         <aside class="menu">
