--- a/index.html
+++ b/index.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
-<html class="fundo">
+<html>
     <head>
         <meta charset="utf-8">
         <title>
             HTML e CSS Sandbox - Transition
         </title>
-        <!-- <link rel="stylesheet" href="/home/matheus/Documents/sandbox-html-css/css/normalize.css";> -->
-        <!-- <link rel="stylesheet" href="/home/matheus/Documents/sandbox-html-css/css/reset.css"> -->
-        <link rel="stylesheet" href="/home/matheus/Documents/sandbox-html-css/css/index.css">
+        <link rel="stylesheet" href="../css/normalize.css";>
+        <link rel="stylesheet" href="../css/index.css">
+        <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     </head>
     <body>
         <main class="principal">
-            <h1>
-                Home
-            </h1>
+            
+            <h1>Home</h1>
+            
             <div>
                 <p>
                     Primeiro paragrafo
