Alterações de CSS e refatoração do HTML

--- a/portifolio.html
+++ b/portifolio.html
@@ -1,41 +1,58 @@
 <!DOCTYPE html>
 <html class="fundo">
+
     <head>
+
         <meta charset="utf-8">
-        <title>
-            HTML e CSS Sandbox - Transition
-        </title>
-        <!-- <link rel="stylesheet" href="/home/matheus/Documents/sandbox-html-css/css/normalize.css";> -->
-        <!-- <link rel="stylesheet" href="/home/matheus/Documents/sandbox-html-css/css/reset.css"> -->
-        <link rel="stylesheet" href="/home/matheus/Documents/sandbox-html-css/css/index.css">
+
+        <title>HTML e CSS Sandbox - Transition</title>
+
+        <link rel="stylesheet" href="./css/normalize.css";>
+
+        <link rel="stylesheet" href="./css/index.css">
+
+        <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+
     </head>
+
     <body>
+
         <main class="principal">
-            <h1>
-                Portifolio
-            </h1>
+
+            <h1>Portifolio</h1>
+
             <div>
                 
             </div>
+
         </main>
+
         <aside class="menu">
-            <h2>
-                Sandbox sobre Page Transition
-            </h2>
+
+            <h2>CSS Transition Sandbox</h2>
+
             <ul class="navegacao">
+
                 <li>
                     <a href="home.html">Home</a>
                 </li>
+
                 <li>
                     <a href="portifolio.html">Portifolio</a>
                 </li>
+
                 <li>
                     <a href="about_me.html">About Me</a>
                 </li>
+
                 <li>
                     <a href="contact.html">Contact</a>
                 </li>
+
             </ul>
+
         </aside>
+
     </body>
+
 </html>
