Melhorias de CSS

--- a/contact.html
+++ b/contact.html
@@ -11,6 +11,8 @@
 
         <link rel="stylesheet" href="./css/index.css">
 
+        <link rel="stylesheet" href="./css/contact.css">
+
         <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 
     </head>
@@ -23,6 +25,16 @@
 
             <div>
                 
+                <p>Name:</p>
+
+                <input></input>
+
+                <p>Email</p>
+
+                <input></input>
+
+                <textarea></textarea>
+
             </div>
 
         </main>
