--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
 
         <link rel="stylesheet" href="./css/contact.css">
 
-        <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
 
     </head>
 
@@ -27,13 +27,13 @@
                 
                 <p>Name:</p>
 
-                <input></input>
+                <input  class="container"></input>
 
-                <p>Email</p>
+                <p>Email:</p>
 
-                <input></input>
+                <input  class="container"></input>
 
-                <textarea></textarea>
+                <textarea  class="container"></textarea>
 
             </div>
 
