--- a/home.html
+++ b/home.html
@@ -11,7 +11,9 @@
 
         <link rel="stylesheet" href="./css/index.css">
 
-        <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+        <link rel="stylesheet" href="./css/home.css"
+
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
 
     </head>
 
