--- a/portifolio.html
+++ b/portifolio.html
@@ -11,7 +11,7 @@
 
         <link rel="stylesheet" href="./css/index.css">
 
-        <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
 
     </head>
 
