Melhorias de layout

--- a/about_me.html
+++ b/about_me.html
@@ -7,7 +7,9 @@
 
         <title>HTML e CSS Sandbox - Transition</title>
 
-        <link rel="stylesheet" href="./css/normalize.css";>
+        <link rel="stylesheet" href="./css/reset.css">
+
+        <link rel="stylesheet" href="./css/normalize.css">
 
         <link rel="stylesheet" href="./css/index.css">
 
